# entry-point-util

./: .gitignore  README.md  pyproject.toml
src/entry_point_util/: __init__.py
src/tests/: conftest.py  test_all.py
